src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Sub_reason__c</fullName>
        <label>Sub-reason</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activate new user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password reset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SuperRegion__c</fullName>
        <formula>Account.Super_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SuperRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Region_Lookup__c</fullName>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <description>Task Category from GSO Org</description>
        <label>Task Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Identifies team case is assinged to</description>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Hothelp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQC Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EID/VID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade TSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade Rollout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom NewTrade Product Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destination services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Systems Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Partner Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Debit Memos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Fulfillment Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing &amp; Schedule Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality &amp; Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fare Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC Help</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TempOwnerId__c</fullName>
        <label>TempOwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translated_Description__c</fullName>
        <description>This will hold the google translated version of the description if the description field contains text that is not in the native language of the person working the case</description>
        <label>Translated Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ACPR_Reply</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_CPR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Reply: Customer Email</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Air CPR</value>
        </filters>
        <label>ACPR Reply</label>
        <sharedTo>
            <groups>Air CPR</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Admin_View_Record_Type</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Age_In_Business_Hours__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT.CASE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>Admin View - Record Type</label>
        <sharedTo>
            <groups>Administrators</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_HSTS_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.TYPE</columns>
        <columns>Team__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Super_Region_Lookup__c</columns>
        <columns>Language__c</columns>
        <columns>Chain__c</columns>
        <columns>Brand_Lookup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Hotel_Systems_Technical_Support</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>notEqual</operation>
            <value>Ecom NewTrade Rollout,Ecom NewTrade Product Creation</value>
        </filters>
        <label>All HSTS Cases</label>
        <sharedTo>
            <groups>HSTS DC Help</groups>
            <groups>HSTS Ecom NewTrade Product Creation</groups>
            <groups>HSTS Ecom NewTrade Rollout</groups>
            <groups>HSTS Ecom NewTrade TSE</groups>
            <groups>HSTS Hothelp</groups>
            <groups>HSTS NYC Tech</groups>
            <groups>HSTS Non-English</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Ticketing_Cases</fullName>
        <booleanFilter>(1 OR (2 AND 3))</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Ticketing</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Ticketing</value>
        </filters>
        <label>All Ticketing Cases</label>
        <sharedTo>
            <groups>Ticketing</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Transport</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>Case_Category__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Ticketing,Case.Settlement_Reporting,Case.Schedule_Change</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_Fulfillment_Process_Support,Case.Air_CPR,Case.ADM,Case.CarOps,Case.Commissions,Case.Fare_Filing</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <label>All Transport</label>
        <sharedTo>
            <groups>ADM</groups>
            <groups>Air CPR</groups>
            <groups>Air Fulfillment Process &amp; Support</groups>
            <groups>CarOps</groups>
            <groups>Commissions</groups>
            <groups>Schedule Change</groups>
            <groups>Settlement &amp; Reporting</groups>
            <groups>Ticketing</groups>
            <groups>Ticketing &amp; Schedule Change</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_ADM_Cases</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.ADM</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>ADM</value>
        </filters>
        <label>Closed ADM Cases</label>
        <sharedTo>
            <groups>ADM</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_AFPS_Cases</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_Fulfillment_Process_Support</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Air Fulfillment Process &amp; Support</value>
        </filters>
        <label>Closed AFPS Cases</label>
        <sharedTo>
            <groups>Air Fulfillment Process &amp; Support</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_AMER_Air_CPR_Cases</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2 AND 5</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_CPR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Air CPR</value>
        </filters>
        <filters>
            <field>Super_Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Closed AMER Air CPR Cases</label>
        <sharedTo>
            <groups>Air CPR</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_APAC_Air_CPR_Cases</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2 AND 5</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_CPR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Air CPR</value>
        </filters>
        <filters>
            <field>Super_Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>Closed APAC Air CPR Cases</label>
        <sharedTo>
            <groups>Air CPR</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Air_CPR_Cases</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_CPR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Air CPR</value>
        </filters>
        <label>Closed Air CPR Cases</label>
        <sharedTo>
            <groups>Air CPR</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Car_Ops_Cases</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CarOps</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>CarOps</value>
        </filters>
        <label>Closed Car Ops Cases</label>
        <sharedTo>
            <groups>CarOps</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Comm_Cases</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Commissions</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Commissions</value>
        </filters>
        <label>Closed Commissions Cases</label>
        <sharedTo>
            <groups>Commissions</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_EMEA_Air_CPR_Cases</fullName>
        <booleanFilter>(1 OR (3 AND 4)) AND 2 AND 5</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Air_CPR</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Troubleshooting</value>
        </filters>
        <filters>
            <field>Involved__c</field>
            <operation>includes</operation>
            <value>Air CPR</value>
        </filters>
        <filters>
            <field>Super_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>Closed EMEA Air CPR Cases</label>
        <sharedTo>
            <groups>Air CPR</groups>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ADM</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <description>Airline Debit Memos</description>
        <label>ADM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Air_CPR</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <description>Air Configuration and Pricing Research</description>
        <label>Air CPR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Air_Fulfillment_Process_Support</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <label>Air Fulfillment Process &amp; Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>CarOps</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <description>Car Operations</description>
        <label>CarOps</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commissions</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <description>Commissions</description>
        <label>Commissions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Destination_Services</fullName>
        <active>true</active>
        <businessProcess>Destination Services</businessProcess>
        <description>Destination Services</description>
        <label>Destination Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fare_Filing</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <description>Fare Filing</description>
        <label>Fare Filing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Geography</fullName>
        <active>true</active>
        <businessProcess>Geography</businessProcess>
        <description>Geography</description>
        <label>Geography</label>
    </recordTypes>
    <recordTypes>
        <fullName>HDM</fullName>
        <active>true</active>
        <businessProcess>HDM</businessProcess>
        <description>Hotel Data Management</description>
        <label>HDM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel_Systems_Technical_Support</fullName>
        <active>true</active>
        <businessProcess>Hotel Systems Technical Support</businessProcess>
        <description>Hotel Systems Technical  Support</description>
        <label>Hotel Systems Technical Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lodging_Content</fullName>
        <active>true</active>
        <businessProcess>Lodging Content</businessProcess>
        <description>Lodging Content</description>
        <label>Lodging Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Media_Content</fullName>
        <active>true</active>
        <businessProcess>Media %2F Virtual Tours</businessProcess>
        <description>Media</description>
        <label>Media Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Schedule_Change</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <description>Schedule Change</description>
        <label>Schedule Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Settlement_Reporting</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <description>Settlement &amp; Reporting</description>
        <label>Settlement &amp; Reporting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Star_Ratings</fullName>
        <active>true</active>
        <businessProcess>Star Ratings</businessProcess>
        <description>Star Ratings</description>
        <label>Star Ratings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Request</fullName>
        <active>true</active>
        <businessProcess>Support Request</businessProcess>
        <description>Used by GSO team to handle support requests from business teams</description>
        <label>Support Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ticketing</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <description>Ticketing</description>
        <label>Ticketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Troubleshooting</fullName>
        <active>true</active>
        <businessProcess>Transport</businessProcess>
        <label>Troubleshooting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual_Tours_Content</fullName>
        <active>true</active>
        <businessProcess>Media %2F Virtual Tours</businessProcess>
        <description>Virtual Tours</description>
        <label>Virtual Tours Content</label>
    </recordTypes>
</CustomObject>